--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   #For Shared Preferences
   flutter_secure_storage: ^5.0.2
 
-  font_awesome_flutter: ^10.1.0
+
   google_sign_in: ^5.4.0
   provider: ^6.0.3
 
@@ -34,6 +34,12 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  #Splash Screen
+#  flutter_native_splash:
+#
+#flutter_native_splash:
+#  color: "#ffffff"
+#  image: assets/password_manager.jpg
 
 flutter:
 
