--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
 
   google_sign_in: ^5.4.0
   provider: ^6.0.3
+  flutter_swipe_action_cell: ^3.0.4
 
 dev_dependencies:
   flutter_test:
